--- a/src/ReferenceArchitecture.Application/appsettings.json
+++ b/src/ReferenceArchitecture.Application/appsettings.json
@@ -1,9 +1,24 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Logging" : {
+    "LogLevel" : {
+      "Default" : "Information",
+      "Microsoft.AspNetCore" : "Warning"
     }
   },
+  "kafkaProducer" : {
+    "bootstrap.servers" : "localhost:9092",
+    "acks" : "all",
+    "security.protocol": "PLAINTEXT"
+  },
+  "kafkaConsumer" : {
+    "bootstrap.servers" : "localhost:9092",
+    "security.protocol": "PLAINTEXT",
+    "group.id" : "reference-arch-demo-app",
+    "enable.auto.commit": "false"
+  },
+  "topics" : [
+    "demo-topic-1",
+    "demo-topic-2"
+  ],
   "AllowedHosts": "*"
 }
