--- a/src/ReferenceArchitecture.Application/ReferenceArchitecture.Application.csproj
+++ b/src/ReferenceArchitecture.Application/ReferenceArchitecture.Application.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Ardalis.GuardClauses" Version="4.0.1" />
       <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
       <PackageReference Include="PPM.Eventing.Kafka.Hosting" Version="1.1.2" />
       <PackageReference Include="PPM.HealthChecks" Version="1.1.2" />
