--- a/src/ReferenceArchitecture.Core/ReferenceArchitecture.Core.csproj
+++ b/src/ReferenceArchitecture.Core/ReferenceArchitecture.Core.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="PPM.Eventing.Core" Version="1.1.2" />
+    </ItemGroup>
+
 </Project>
