refactor - added an application layer separate from webapi

--- a/ReferenceArchitecture.Application.Tests/ReferenceArchitecture.Application.Tests.csproj
+++ b/ReferenceArchitecture.Application.Tests/ReferenceArchitecture.Application.Tests.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\src\ReferenceArchitecture.Application\ReferenceArchitecture.Application.csproj" />
+      <ProjectReference Include="..\src\ReferenceArchitecture.WebApi\ReferenceArchitecture.WebApi.csproj" />
     </ItemGroup>
 
 </Project>
