--- a/src/ReferenceArchitecture.Application.Tests/ReferenceArchitecture.Application.Tests.csproj
+++ b/src/ReferenceArchitecture.Application.Tests/ReferenceArchitecture.Application.Tests.csproj
@@ -23,7 +23,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\src\ReferenceArchitecture.WebApi\ReferenceArchitecture.WebApi.csproj" />
+      <ProjectReference Include="..\ReferenceArchitecture.Core\ReferenceArchitecture.Core.csproj" />
+      <ProjectReference Include="..\ReferenceArchitecture.WebApi\ReferenceArchitecture.WebApi.csproj" />
     </ItemGroup>
 
 </Project>
