--- a/src/ReferenceArchitecture.Application/ReferenceArchitecture.Application.csproj
+++ b/src/ReferenceArchitecture.Application/ReferenceArchitecture.Application.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\src\ReferenceArchitecture.Core\ReferenceArchitecture.Core.csproj" />
+      <ProjectReference Include="..\ReferenceArchitecture.Core\ReferenceArchitecture.Core.csproj" />
     </ItemGroup>
 
 </Project>
