--- a/src/ReferenceArchitecture.WebApi/Properties/launchSettings.json
+++ b/src/ReferenceArchitecture.WebApi/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7108;http://localhost:5238",
-      "launchUrl" : "api/v1/demo",
+      "launchUrl" : "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
